[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlgenotype"
version = "0.1.0"
authors = [
  { name="Nancy F. Hansen", email="nhansen@mail.nih.gov" },
]
description = "A package with utilities for training classifiers to recognize SVs in short read datasets"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nhansen/mlgenotype"
"Bug Tracker" = "https://github.com/nhansen/mlgenotype/issues"
