[build-system]
requires = ["setuptools >= 48", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "mlgenotype"
version = "0.1.12"
authors = [
  { name="Nancy F. Hansen", email="nhansen@mail.nih.gov" },
]
description = "A package with utilities for training classifiers to recognize SVs in short read datasets"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'pandas >= 1.0',
  'scikit-learn == 1.0.2',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nhansen/mlgenotype"
"Bug Tracker" = "https://github.com/nhansen/mlgenotype/issues"

#[project.optional-dependencies]
#dev = [
    #"pylint ~=2.14.0",
    #"toml ~=0.10.2",
    #"yapf ~=0.32.0",
#]
#test = [
    #"pytest-cov ~=3.0.0",
#]
