[metadata]
name = mlgenotype
description = a Python library for calling genotypes from short read sequence features
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/nhansen/mlgenotype
author = Nancy F Hansen, Gracelyn Hill, Jennifer Lin
author_email = nhansen@mail.nih.gov,
project_urls = 
     Documentation = https://mlgenotype.readthedocs.io
     Source = https://github.com/nhansen/mlgenotype
     Tracker = https://github.com/nhansen/mlgenotype/issues

[options]
python_requires = >=3.7
install_requires = 
     pytest
     pandas >= 1.0
     scikit-learn >= 0.20

[options.packages.find]
where=src
